--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  display: flex;
+  display: grid;
   justify-content: space-evenly;
 }
 .container {
@@ -43,4 +43,12 @@ ul li {
   justify-content: space-between;
   align-items: center;
   border: 1px solid #ccc;
+}
+.aelina{
+  width: 200px;
+  height: 50px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 6px;
+border: 1px solid red;
 }
