--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  display: flex;
+  display: grid;
   justify-content: space-evenly;
 }
 .container {
@@ -43,4 +43,12 @@ ul li {
   justify-content: space-between;
   align-items: center;
   border: 1px solid #ccc;
+}
+#Alym{
+   width: 110px;
+   height: 40px;
+  padding: 20px;
+  margin: 20px auto;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px;
 }
