--- a/style.css
+++ b/style.css
@@ -44,3 +44,14 @@ ul li {
   align-items: center;
   border: 1px solid #ccc;
 }
+#Barbarist{
+    margin: 0 auto;
+    width: 100px;
+    padding: 8px 16px;
+    color: rgb(0, 0, 0);
+    border: 1px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+        box-shadow: 0 2px 4px;
+}
