--- a/style.css
+++ b/style.css
@@ -44,3 +44,11 @@ ul li {
   align-items: center;
   border: 1px solid #ccc;
 }
+.Alina{
+    width: 100px;
+    height: 50px;
+    padding: 20px;
+    margin-left: 270px;
+    border-radius: 10px;
+    box-shadow: 0px 3px 6px;
+}
